<resources>
    <string name="app_name">Paint The World</string>
    <string name="play">Play</string>
    <string name="effacer_tout">Effacer</string>
    <string name="envoyer">Envoyer</string>
    <string name="cercle">Cercle</string>
    <string name="ff000000">ff000000</string>
    <string name="_30_px">30 px</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="_20">20</string>
    <string name="croix">Croix</string>
    <string name="annuler">Annuler</string>
    <string name="refaire">Refaire</string>
    <string name="regular">Regular</string>
    <string name="premium">Premium</string>
    <string name="width">%1$s px</string>
    <string name="activate">Activate</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cacher_rayon">Cacher rayon</string>
    <string name="vue_tout_les_dessins">Vue : tout les dessins</string>
    <string name="montrer_premium">Montrer Premium</string>
    <string name="_100_00l">100.00L</string>
    <string name="imagepremium">imagePremium</string>
    <string name="imageregular">imageRegular</string>
</resources>
